@@ -1,5 +1,5 @@
 /*
- * Copyright 2017-2025 OpenAIRE AMKE & Athena Research and Innovation Center
+ * Copyright 2017-2026 OpenAIRE AMKE & Athena Research and Innovation Center
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,206 +16,174 @@
 
 package gr.uoa.di.madgik.resourcecatalogue.manager;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import gr.uoa.di.madgik.catalogue.exception.ValidationException;
+import gr.uoa.di.madgik.catalogue.service.GenericResourceService;
+import gr.uoa.di.madgik.registry.domain.Browsing;
 import gr.uoa.di.madgik.registry.domain.FacetFilter;
-import gr.uoa.di.madgik.registry.domain.Resource;
-import gr.uoa.di.madgik.resourcecatalogue.domain.*;
+import gr.uoa.di.madgik.resourcecatalogue.domain.ConfigurationTemplateBundle;
+import gr.uoa.di.madgik.resourcecatalogue.domain.ConfigurationTemplateInstanceBundle;
+import gr.uoa.di.madgik.resourcecatalogue.domain.ResourceInteroperabilityRecordBundle;
+import gr.uoa.di.madgik.resourcecatalogue.dto.UserInfo;
 import gr.uoa.di.madgik.resourcecatalogue.service.*;
-import gr.uoa.di.madgik.resourcecatalogue.utils.AuthenticationInfo;
-import gr.uoa.di.madgik.resourcecatalogue.utils.ObjectUtils;
 import gr.uoa.di.madgik.resourcecatalogue.utils.ProviderResourcesCommonMethods;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.security.core.Authentication;
 
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Set;
+import java.lang.reflect.InvocationTargetException;
+import java.util.*;
 
 @org.springframework.stereotype.Service("configurationTemplateInstanceManager")
-public class ConfigurationTemplateInstanceManager extends ResourceCatalogueManager<ConfigurationTemplateInstanceBundle>
+public class ConfigurationTemplateInstanceManager extends ResourceCatalogueGenericManager<ConfigurationTemplateInstanceBundle>
         implements ConfigurationTemplateInstanceService {
 
     private static final Logger logger = LoggerFactory.getLogger(ConfigurationTemplateInstanceManager.class);
-    private final ConfigurationTemplateInstanceService configInstanceService;
     private final ResourceInteroperabilityRecordService rirService;
 
     private final ConfigurationTemplateService configService;
     private final SecurityService securityService;
     private final ProviderResourcesCommonMethods commonMethods;
-    private final IdCreator idCreator;
-    private final PublicConfigurationTemplateInstanceService publicConfigurationTemplateInstanceService;
+    private final GenericResourceService genericResourceService;
+    private final VocabularyService vocabularyService;
 
-    public ConfigurationTemplateInstanceManager(@Lazy ConfigurationTemplateInstanceService configInstanceService,
+    @Value("${catalogue.id}")
+    private String catalogueId;
+
+    public ConfigurationTemplateInstanceManager(@Lazy ConfigurationTemplateInstanceService service,
                                                 @Lazy ConfigurationTemplateService configService,
                                                 @Lazy ResourceInteroperabilityRecordService rirService,
                                                 SecurityService securityService, IdCreator idCreator,
                                                 ProviderResourcesCommonMethods commonMethods,
-                                                PublicConfigurationTemplateInstanceService publicConfigurationTemplateInstanceService) {
-        super(ConfigurationTemplateInstanceBundle.class);
-        this.configInstanceService = configInstanceService;
+                                                GenericResourceService genericResourceService,
+                                                VocabularyService vocabularyService) {
+        super(genericResourceService, idCreator, securityService, vocabularyService);
         this.configService = configService;
         this.rirService = rirService;
         this.securityService = securityService;
-        this.idCreator = idCreator;
         this.commonMethods = commonMethods;
-        this.publicConfigurationTemplateInstanceService = publicConfigurationTemplateInstanceService;
+        this.genericResourceService = genericResourceService;
+        this.vocabularyService = vocabularyService;
     }
 
-    @Override
     public String getResourceTypeName() {
         return "configuration_template_instance";
     }
 
     @Override
-    public ConfigurationTemplateInstanceBundle add(ConfigurationTemplateInstanceBundle bundle, Authentication auth) {
-        validate(bundle);
-        checkResourceIdAndConfigurationTemplateIdConsistency(bundle, auth);
-        validateInstanceAgainstTemplate(bundle);
+    public ConfigurationTemplateInstanceBundle add(ConfigurationTemplateInstanceBundle cti, Authentication auth) {
+//        checkResourceIdAndConfigurationTemplateIdConsistency(cti, auth);
+//        validateInstanceAgainstTemplate(cti);
 
-        bundle.setId(idCreator.generate(getResourceTypeName()));
-        commonMethods.createIdentifiers(bundle, getResourceTypeName(), false);
-        logger.trace("Attempting to add a new ConfigurationTemplateInstance: {}", bundle);
-
-        bundle.setMetadata(Metadata.createMetadata(AuthenticationInfo.getFullName(auth),
-                AuthenticationInfo.getEmail(auth).toLowerCase()));
-        List<LoggingInfo> list = commonMethods.returnLoggingInfoListAndCreateRegistrationInfoIfEmpty(bundle, auth);
-        bundle.setLoggingInfo(list);
-        bundle.setLatestOnboardingInfo(list.getFirst());
-
-        // active
-        bundle.setActive(true);
-
-        ConfigurationTemplateInstanceBundle ret;
-        ret = super.add(bundle, null);
-        logger.info("Added Configuration Template Instance with id '{}'", ret.getId());
-
+        cti.markOnboard(vocabularyService.get("approved").getId(), true, UserInfo.of(auth), null);
+        cti.setActive(true);
+        cti.setCatalogueId(this.catalogueId);
+        this.createIdentifiers(cti, getResourceTypeName(), false);
+        cti.setId(cti.getIdentifiers().getOriginalId());
+        //FIXME: should pass validation
+        ConfigurationTemplateInstanceBundle ret = genericResourceService.add(getResourceTypeName(), cti, false);
         return ret;
     }
 
     @Override
-    public ConfigurationTemplateInstanceBundle update(ConfigurationTemplateInstanceBundle bundle, Authentication auth) {
-        logger.trace("Attempting to update the ConfigurationTemplateInstance with id '{}'", bundle.getId());
-
-        ConfigurationTemplateInstanceBundle ret = ObjectUtils.clone(bundle);
-        Resource existing = getResource(ret.getConfigurationTemplateInstance().getId(),
-                ret.getConfigurationTemplateInstance().getCatalogueId(), false);
-        ConfigurationTemplateInstanceBundle existingCTI = deserialize(existing);
-        // check if there are actual changes in the ConfigurationTemplateInstance
-        if (ret.getConfigurationTemplateInstance().equals(existingCTI.getConfigurationTemplateInstance())) {
-            return ret;
+    public ConfigurationTemplateInstanceBundle update(ConfigurationTemplateInstanceBundle bundle, String comment, Authentication auth) {
+        ConfigurationTemplateInstanceBundle existing = get(bundle.getId(), bundle.getCatalogueId());
+        // check if there are actual changes in the Service
+        if (bundle.equals(existing)) {
+            return bundle;
         }
-
-        // block Public ConfigurationTemplateInstanceBundle updates
-        if (ret.getMetadata().isPublished()) {
-            throw new ValidationException("You cannot directly update a Public Configuration Template Instance");
-        }
-
-        validate(ret);
-
-        ret.setMetadata(Metadata.updateMetadata(
-                ret.getMetadata(), AuthenticationInfo.getFullName(auth), AuthenticationInfo.getEmail(auth).toLowerCase()));
-        ret.setIdentifiers(existingCTI.getIdentifiers());
-        List<LoggingInfo> list = commonMethods.returnLoggingInfoListAndCreateRegistrationInfoIfEmpty(existingCTI, auth);
-        LoggingInfo loggingInfo = commonMethods.createLoggingInfo(auth, LoggingInfo.Types.UPDATE.getKey(),
-                LoggingInfo.ActionType.UPDATED.getKey());
-        list.add(loggingInfo);
-        list.sort(Comparator.comparing(LoggingInfo::getDate));
-        ret.setLoggingInfo(list);
-
-        // latestUpdateInfo
-        ret.setLatestUpdateInfo(loggingInfo);
-
-        existing.setPayload(serialize(ret));
-        existing.setResourceType(getResourceType());
+        bundle.markUpdate(UserInfo.of(auth), comment);
 
         // block user from updating resourceId
-        if (!ret.getConfigurationTemplateInstance().getResourceId().equals(existingCTI.getConfigurationTemplateInstance().getResourceId()) &&
+        if (!bundle.getConfigurationTemplateInstance().get("resourceId").equals(existing.getConfigurationTemplateInstance().get("resourceId")) &&
                 !securityService.hasRole(auth, "ROLE_ADMIN")) {
             throw new ValidationException("You cannot change the Resource Id with which this " +
                     "ConfigurationTemplateInstance is related");
         }
-
         // block user from updating configurationTemplateId
-        if (!ret.getConfigurationTemplateInstance().getConfigurationTemplateId()
-                .equals(existingCTI.getConfigurationTemplateInstance().getConfigurationTemplateId()) &&
+        if (!bundle.getConfigurationTemplateInstance().get("configurationTemplateId")
+                .equals(existing.getConfigurationTemplateInstance().get("configurationTemplateId")) &&
                 !securityService.hasRole(auth, "ROLE_ADMIN")) {
             throw new ValidationException("You cannot change the Configuration Template Id with which this " +
                     "ConfigurationTemplateInstance is related");
         }
 
-        resourceService.updateResource(existing);
-        logger.info("Updated Configuration Template Instance with id '{}'", bundle.getId());
-
-        return ret;
+        try {
+            //FIXME: should pass validation
+            return genericResourceService.update(getResourceTypeName(), bundle.getId(), bundle, false);
+        } catch (NoSuchFieldException | InvocationTargetException | NoSuchMethodException e) {
+            throw new RuntimeException(e);
+        }
     }
 
     @Override
     public void delete(ConfigurationTemplateInstanceBundle bundle) {
-        // block Public ConfigurationTemplateInstanceBundle deletions
-        if (bundle.getMetadata().isPublished()) {
-            throw new ValidationException("You cannot directly delete a Public Configuration Template Instance");
-        }
-        logger.trace("User is attempting to delete the ConfigurationTemplateInstance with id '{}'",
-                bundle.getId());
-        super.delete(bundle);
-        logger.info("Deleted the Configuration Template Instance with id '{}'", bundle.getConfigurationTemplateInstance().getId());
+        commonMethods.blockResourceDeletion(bundle.getStatus(), bundle.getMetadata().isPublished());
+        logger.info("Deleting Configuration Template Instance: {}", bundle.getId());
+        genericResourceService.delete(getResourceTypeName(), bundle.getId());
     }
 
     public List<ConfigurationTemplateInstanceBundle> getByResourceId(String id) {
         List<ConfigurationTemplateInstanceBundle> ret = new ArrayList<>();
         FacetFilter ff = new FacetFilter();
         ff.setQuantity(10000);
-        List<ConfigurationTemplateInstanceBundle> list = configInstanceService.getAll(ff, null).getResults();
+        List<ConfigurationTemplateInstanceBundle> list = getAll(ff, null).getResults();
         for (ConfigurationTemplateInstanceBundle bundle : list) {
-            if (bundle.getConfigurationTemplateInstance().getResourceId().equals(id)) {
+            if (bundle.getConfigurationTemplateInstance().get("resourceId").equals(id)) {
                 ret.add(bundle);
             }
         }
         return ret;
     }
 
-    public List<ConfigurationTemplateInstance> getByConfigurationTemplateId(String id) {
-        List<ConfigurationTemplateInstance> ret = new ArrayList<>();
+    public List<LinkedHashMap<String, Object>> getByConfigurationTemplateId(String id) {
+        List<LinkedHashMap<String, Object>> ret = new ArrayList<>();
         FacetFilter ff = new FacetFilter();
         ff.setQuantity(10000);
         ff.addFilter("published", false);
-        List<ConfigurationTemplateInstanceBundle> list = configInstanceService.getAll(ff, null).getResults();
+        List<ConfigurationTemplateInstanceBundle> list = getAll(ff, null).getResults();
         for (ConfigurationTemplateInstanceBundle bundle : list) {
-            if (bundle.getConfigurationTemplateInstance().getConfigurationTemplateId().equals(id)) {
+            if (bundle.getConfigurationTemplateInstance().get("configurationTemplateId").equals(id)) {
                 ret.add(bundle.getConfigurationTemplateInstance());
             }
         }
         return ret;
     }
 
-    public ConfigurationTemplateInstance getByResourceAndConfigurationTemplateId(String resourceId, String ctId) {
+    public LinkedHashMap<String, Object> getByResourceAndConfigurationTemplateId(String resourceId, String ctId) {
         FacetFilter ff = new FacetFilter();
         ff.setQuantity(10000);
         ff.addFilter("published", false);
         ff.addFilter("resource_id", resourceId);
         ff.addFilter("configuration_template_id", ctId);
-        List<ConfigurationTemplateInstanceBundle> list = configInstanceService.getAll(ff, null).getResults();
+
+        List<?> list = getAll(ff, null).getResults();
         if (!list.isEmpty()) {
-            return list.getFirst().getConfigurationTemplateInstance();
+            ObjectMapper mapper = new ObjectMapper();
+            ConfigurationTemplateInstanceBundle bundle =
+                    mapper.convertValue(list.get(0), ConfigurationTemplateInstanceBundle.class);
+            return bundle.getConfigurationTemplateInstance();
         }
         return null;
     }
 
     private void checkResourceIdAndConfigurationTemplateIdConsistency(ConfigurationTemplateInstanceBundle bundle,
                                                                       Authentication auth) {
-        String resourceId = bundle.getConfigurationTemplateInstance().getResourceId();
-        String configurationTemplateId = bundle.getConfigurationTemplateInstance().getConfigurationTemplateId();
+        String resourceId = (String) bundle.getConfigurationTemplateInstance().get("resourceId");
+        String configurationTemplateId = (String) bundle.getConfigurationTemplateInstance().get("configurationTemplateId");
         // check if the configuration template ID is related to the resource ID
         boolean found = false;
         List<ResourceInteroperabilityRecordBundle> list = rirService.getAll(createFacetFilter(), auth).getResults();
         for (ResourceInteroperabilityRecordBundle rirBundle : list) {
-            if (rirBundle.getResourceInteroperabilityRecord().getResourceId().equals(resourceId)) {
+            if (rirBundle.getResourceInteroperabilityRecord().get("resourceId").equals(resourceId)) {
                 ConfigurationTemplateBundle ctBundle = configService.get(configurationTemplateId);
-                if (rirBundle.getResourceInteroperabilityRecord().getInteroperabilityRecordIds()
-                        .contains(ctBundle.getConfigurationTemplate().getInteroperabilityRecordId())) {
+                Collection<String> rirIds = (Collection<String>) rirBundle.getResourceInteroperabilityRecord()
+                        .get("interoperabilityRecordIds");
+                String ctInteroperabilityId = (String) ctBundle.getConfigurationTemplate()
+                        .get("interoperabilityRecordId");
+                if (rirIds.contains(ctInteroperabilityId)) {
                     found = true;
                     break;
                 }
@@ -226,10 +194,10 @@ public class ConfigurationTemplateInstanceManager extends ResourceCatalogueManag
         }
 
         // check if a Configuration Template Implementation with the same resourceId, configurationTemplateId already exists
-        List<ConfigurationTemplateInstanceBundle> configurationTemplateInstanceBundleList = configInstanceService.getAll(createFacetFilter(), auth).getResults();
+        List<ConfigurationTemplateInstanceBundle> configurationTemplateInstanceBundleList = getAll(createFacetFilter(), auth).getResults();
         for (ConfigurationTemplateInstanceBundle ctiBundle : configurationTemplateInstanceBundleList) {
-            if (ctiBundle.getConfigurationTemplateInstance().getResourceId().equals(resourceId) &&
-                    ctiBundle.getConfigurationTemplateInstance().getConfigurationTemplateId().equals(configurationTemplateId)) {
+            if (ctiBundle.getConfigurationTemplateInstance().get("resourceId").equals(resourceId) &&
+                    ctiBundle.getConfigurationTemplateInstance().get("configurationTemplateId").equals(configurationTemplateId)) {
                 throw new ValidationException(String.format("There is already a Configuration Template Instance registered " +
                                 "for Resource [%s] under [%s] Configuration Template",
                         resourceId, configurationTemplateId));
@@ -244,20 +212,61 @@ public class ConfigurationTemplateInstanceManager extends ResourceCatalogueManag
         return ff;
     }
 
-    private void validateInstanceAgainstTemplate(ConfigurationTemplateInstanceBundle bundle) {
-        ConfigurationTemplateBundle ct = configService.get(bundle.getConfigurationTemplateInstance().getConfigurationTemplateId(),
-                bundle.getConfigurationTemplateInstance().getCatalogueId(), false);
-        Set<String> ctKeys = ct.getConfigurationTemplate().getFormModel().keySet();
-        Set<String> ctiKeys = bundle.getConfigurationTemplateInstance().getPayload().keySet();
+    private void validateInstanceAgainstTemplate(ConfigurationTemplateInstanceBundle cti) {
+        ConfigurationTemplateBundle ct = configService.get((String) cti.getConfigurationTemplateInstance().get("configurationTemplateId"),
+                cti.getCatalogueId());
+        Set<String> ctKeys = ((Map<String, Object>) ct.getConfigurationTemplate().get("formModel")).keySet();
+        Set<String> ctiKeys = ((Map<String, Object>) cti.getConfigurationTemplateInstance().get("payload")).keySet();
 
         if (!ctKeys.containsAll(ctiKeys)) {
             throw new ValidationException("Configuration Template Instance does not contain the required model in its payload");
         }
     }
 
-    public ConfigurationTemplateInstanceBundle createPublicConfigurationTemplateInstance(
-            ConfigurationTemplateInstanceBundle bundle, Authentication auth) {
-        publicConfigurationTemplateInstanceService.add(bundle, auth);
-        return bundle;
+    //region Not-Used
+    @Override
+    public Browsing<ConfigurationTemplateInstanceBundle> getMy(FacetFilter filter, Authentication authentication) {
+        return null;
     }
+
+    @Override
+    public ConfigurationTemplateInstanceBundle verify(String id, String status, Boolean active, Authentication auth) {
+        return null;
+    }
+
+    @Override
+    public ConfigurationTemplateInstanceBundle setActive(String id, Boolean active, Authentication auth) {
+        return null;
+    }
+
+    @Override
+    public ConfigurationTemplateInstanceBundle addDraft(ConfigurationTemplateInstanceBundle bundle, Authentication auth) {
+        return null;
+    }
+
+    @Override
+    public ConfigurationTemplateInstanceBundle updateDraft(ConfigurationTemplateInstanceBundle bundle, Authentication auth) {
+        return null;
+    }
+
+    @Override
+    public void deleteDraft(ConfigurationTemplateInstanceBundle bundle) {
+
+    }
+
+    @Override
+    public ConfigurationTemplateInstanceBundle finalizeDraft(ConfigurationTemplateInstanceBundle configurationTemplateInstanceBundle, Authentication auth) {
+        return null;
+    }
+
+    @Override
+    public void addBulk(List<ConfigurationTemplateInstanceBundle> resources, Authentication auth) {
+        super.addBulk(resources, auth);
+    }
+
+    @Override
+    public void updateBulk(List<ConfigurationTemplateInstanceBundle> resources, Authentication auth) {
+        super.updateBulk(resources, auth);
+    }
+    //endregion
 }
